Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-configmap-reload
  namespace: kubernetes-configmap-reload
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubernetes-configmap-reload
  template:
    metadata:
      labels:
        app: kubernetes-configmap-reload
    spec:
      containers:
        - name: kubernetes-configmap-reload
          image: ${docker_repo}/${ImageName}:${ImageTag}
---
kind: Service
apiVersion: v1
metadata:
  name: kubernetes-configmap-reload
  namespace: kubernetes-configmap-reload
spec:
  type: NodePort
  selector:
    app: kubernetes-configmap-reload
  ports:
    - name: http
      protocol: TCP
      # ELB's port
      port: 8081
      targetPort: 8081
      nodePort: 31500
